# ticTacToe

./: CMakeLists.txt  README.md  build.sh  main.cpp
include/: botPlayer.hpp  dataStream.hpp  gameplay.hpp
src/: gameplay.cpp
